--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,8 +29,97 @@
 	display: inline;
 }
 
- #vehicles .vehicle-wrapper .level {
+#vehicles .vehicle-wrapper .level {
 	margin-left: 10px;
 	display: inline-block;
 	width: 40px;
 }
+
+.detail_clan_name {
+	margin-right: 5px;
+}
+
+.icon {
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+	margin-top: 1px;
+	line-height: 16px;
+	vertical-align: text-top;
+	background-position: 50% 50%;
+	background-repeat: no-repeat !important;
+	
+}
+
+.icon.ico_de {
+	background: url('../img/flags/de.png');
+}
+
+.icon.ico_en {
+	background: url('../img/flags/gb.png');
+}
+
+.icon.ico_fr {
+	background: url('../img/flags/fr.png');
+}
+
+.icon.ico_tr {
+	background: url('../img/flags/tr.png');
+}
+
+.icon.ico_cz {
+	background: url('../img/flags/cz.png');
+}
+
+.icon.ico_pl {
+	background: url('../img/flags/pl.png');
+}
+
+.icon.ico_es {
+	background: url('../img/flags/es.png');
+}
+
+.icon.ico_tr {
+	background: url('../img/flags/tr.png');
+}
+
+.icon.inactive {
+	filter: grayscale(60%);
+	filter: url(desaturate.svg#greyscale);
+	filter: gray;
+	-webkit-filter: grayscale(60%);
+	-moz-filter: grayscale(60%);
+	-ms-filter: grayscale(60%);
+	-o-filter: grayscale(60%);
+	-webkit-filter: grayscale(0.6);
+
+	filter: alpha(opacity=60);
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+	-moz-opacity:0.6;
+	-khtml-opacity: 0.6;
+	opacity: 0.6;
+}
+
+#langButton a{
+	text-decoration: none;
+	cursor: pointer;
+}
+
+#langButton a:hover .icon.inactive,
+#langButton a .icon.inactive:hover{
+	filter: grayscale(0%);
+	filter: url(desaturate.svg#greyscale);
+	filter: gray;
+	-webkit-filter: grayscale(0%);
+	-moz-filter: grayscale(0%);
+	-ms-filter: grayscale(0%);
+	-o-filter: grayscale(0%);
+	-webkit-filter: grayscale(0);
+
+	filter: alpha(opacity=100);
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	-moz-opacity:1;
+	-khtml-opacity: 1;
+	opacity: 1;
+}
+
