--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,16 @@
 	background: url('../img/flags/tr.png');
 }
 
-.icon.inactive {
+#langSwichter a {
+	text-decoration: none;
+	cursor: pointer;
+}
+
+#langSwitcher a:hover {
+	text-decoration: none;
+}
+
+#langSwitcher a .icon.inactive {
 	filter: grayscale(60%);
 	filter: url(desaturate.svg#greyscale);
 	filter: gray;
@@ -99,27 +108,3 @@
 	-khtml-opacity: 0.6;
 	opacity: 0.6;
 }
-
-#langButton a{
-	text-decoration: none;
-	cursor: pointer;
-}
-
-#langButton a:hover .icon.inactive,
-#langButton a .icon.inactive:hover{
-	filter: grayscale(0%);
-	filter: url(desaturate.svg#greyscale);
-	filter: gray;
-	-webkit-filter: grayscale(0%);
-	-moz-filter: grayscale(0%);
-	-ms-filter: grayscale(0%);
-	-o-filter: grayscale(0%);
-	-webkit-filter: grayscale(0);
-
-	filter: alpha(opacity=100);
-	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-	-moz-opacity:1;
-	-khtml-opacity: 1;
-	opacity: 1;
-}
-
